src/snapshots/sigsum__policy__tests__uplicate_unknown_member_name.snap
---
source: src/policy.rs
expression: builder.build()
---
Policy {
    logs: {},
    witnesses: {},
    quorums: {},
    quorum: None,
}
